--- a/RTIMULib.ini
+++ b/RTIMULib.ini
@@ -82,13 +82,13 @@ I2CHumidityAddress=0
 # 
 
 # Compass calibration settings
-CompassCalValid=false
-CompassCalMinX=0.000000
-CompassCalMinY=0.000000
-CompassCalMinZ=0.000000
-CompassCalMaxX=0.000000
-CompassCalMaxY=0.000000
-CompassCalMaxZ=0.000000
+CompassCalValid=true
+CompassCalMinX=-97.357147
+CompassCalMinY=-70.887154
+CompassCalMinZ=-157.265259
+CompassCalMaxX=134.507965
+CompassCalMaxY=94.264542
+CompassCalMaxZ=97.863541
 
 # #####################################################################
 # 
@@ -132,9 +132,9 @@ AccelCalMaxZ=0.000000
 
 # Saved gyro bias data
 GyroBiasValid=true
-GyroBiasX=-0.024654
-GyroBiasY=0.011982
-GyroBiasZ=-0.010269
+GyroBiasX=-0.040673
+GyroBiasY=-0.007001
+GyroBiasZ=-0.011432
 
 # #####################################################################
 # 
